--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
       <h1 class="genre__title">GameSpot</h1>
       <div class="genre__img-wrapper">
         <h2 class="genre__img-title">Coming soon</h2>
-        <div class="genre__img-container">
-          <a href="game.html" class="games__link">
-            <img class="genre__img-soon" src="img/witcher-icon.jpg" alt="">
-            <p class="genre__soon-text">The Witcher 3: Wild Hunt</p>
-          </a>
-          <a href="game.html" class="games__link">
-            <img class="genre__img-soon" src="img/witcher-icon.jpg" alt="">
-            <p class="genre__soon-text">The Witcher 3: Wild Hunt</p>
-          </a>
-        </div>
+        <a href="game.html" class="games__link">
+          <img class="genre__img-soon" src="img/witcher-icon2.jpg" alt="">
+          <p class="genre__soon-text">The Witcher 3: Wild Hunt</p>
+        </a>
+      </div>
+      <div class="genre__select-wrapper">
+       <select class="genre__select">
+        <option class="genre__option" value="" selected disabled>Choose a genre</option>
+        <option class="genre__option" value="Racing">Racing</option>
+        <option class="genre__option" value="Action">Action</option>
+        <option class="genre__option" value="Simulation">Simulation</option>
+        <option class="genre__option" value="Sports">Sports</option>
+        <option class="genre__option" value="Strategy">Strategy</option>
+        <option class="genre__option" value="Fantasy">Fantasy</option>
+      </select>
+      <button type="button" class="genre__button">Continue</button>
       </div>
       <!--div class="genre__list-wrapper">
         <h2 class="genre__genre-title">Choose a genre</h2>
@@ -45,13 +51,6 @@
           </li>
         </ul>
       </div-->
-      <div class="genre__img-item">
-        <h2 class="genre__img-title">Game of a day</h2>
-        <a href="game.html" class="games__link">
-          <img class="genre__img" src="img/witcher-icon2.jpg" alt="">
-          <p class="genre__img-text">The Witcher 3: Wild Hunt</p>
-        </a>
-      </div>
     </section>
     <footer class="footer">
       <nav class="main-nav">
