--- a/games.html
+++ b/games.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Games Review2</title>
+    <title>Games Review4</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
@@ -29,7 +29,7 @@
             <svg class="main-nav__svg-watch" width="24" height="24">
               <use xlink:href="img/icons/stack.svg#heart-icon"></use>
             </svg>
-            <p class="main-nav__item-text">Top</p>
+            <p class="main-nav__item-text">Wish</p>
           </a>
         </li>
       </nav>
@@ -38,7 +38,10 @@
       <li class="games__item">
         <a href="game.html" class="games__link">
           <img class="games__img" src="" alt="">
-          <p class="games__text"></p>
+          <div class="games__text-wrapper">
+            <p class="games__name"></p>
+            <p class="games__genre"></p>
+          </div>
         </a>
       </li>
     </template>
