--- a/index.html
+++ b/index.html
@@ -3,54 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Games Review2</title>
+    <title>Games Review4</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <section class="genre">
-      <h1 class="genre__title">GameSpot</h1>
+      <h1 class="genre__title">GameHub</h1>
       <div class="genre__img-wrapper">
         <h2 class="genre__img-title">Coming soon</h2>
-        <a href="game.html" class="games__link">
-          <img class="genre__img-soon" src="img/witcher-icon2.jpg" alt="">
-          <p class="genre__soon-text">The Witcher 3: Wild Hunt</p>
+        <a href="game.html" class="genre__img-link">
+          <img class="genre__img-soon" src="img/starfield-icon.jpg" alt="">
+          <p class="genre__soon-text">Starfield</p>
         </a>
       </div>
       <div class="genre__select-wrapper">
-       <select class="genre__select">
-        <option class="genre__option" value="" selected disabled>Choose a genre</option>
-        <option class="genre__option" value="Racing">Racing</option>
-        <option class="genre__option" value="Action">Action</option>
-        <option class="genre__option" value="Simulation">Simulation</option>
-        <option class="genre__option" value="Sports">Sports</option>
-        <option class="genre__option" value="Strategy">Strategy</option>
-        <option class="genre__option" value="Fantasy">Fantasy</option>
-      </select>
-      <button type="button" class="genre__button">Continue</button>
+        <select class="genre__select">
+          <option class="genre__option" value="" selected disabled>Choose a genre</option>
+          <option class="genre__option" value="Racing">Racing</option>
+          <option class="genre__option" value="Action">Action</option>
+          <option class="genre__option" value="Simulation">Simulation</option>
+          <option class="genre__option" value="Sports">Sports</option>
+          <option class="genre__option" value="Strategy">Strategy</option>
+          <option class="genre__option" value="Fantasy">Fantasy</option>
+        </select>
+        <button type="button" class="genre__button">Continue</button>
       </div>
-      <!--div class="genre__list-wrapper">
-        <h2 class="genre__genre-title">Choose a genre</h2>
-        <ul class="genre__list">
-          <li class="genre__item">
-            <p class="genre__text">Racing</p>
-          </li>
-          <li class="genre__item">
-            <p class="genre__text">Action</p>
-          </li>
-          <li class="genre__item">
-            <p class="genre__text">Simulation</p>
-          </li>
-          <li class="genre__item">
-            <p class="genre__text">Sports</p>
-          </li>
-          <li class="genre__item">
-            <p class="genre__text">Strategy</p>
-          </li>
-          <li class="genre__item">
-            <p class="genre__text">Fantasy</p>
-          </li>
-        </ul>
-      </div-->
     </section>
     <footer class="footer">
       <nav class="main-nav">
@@ -67,7 +44,7 @@
             <svg class="main-nav__svg-watch" width="24" height="24">
               <use xlink:href="img/icons/stack.svg#heart-icon"></use>
             </svg>
-            <p class="main-nav__item-text">Top</p>
+            <p class="main-nav__item-text">Wish</p>
           </a>
         </li>
       </nav>
