--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2 class="genre__img-title">Coming soon</h2>
         <a href="game.html" class="genre__img-link">
           <img class="genre__img-soon" src="img/starfield-icon.jpg" alt="">
-          <p class="genre__soon-text">Starfield</p>
+          <pre class="genre__soon-text">Starfield      06.09.2023</pre>
         </a>
       </div>
       <div class="genre__select-wrapper">
