--- a/game.html
+++ b/game.html
@@ -15,50 +15,48 @@
           <img class="game__img" id="img2" src="" alt="">
           <img class="game__img" id="img3" src="" alt="">
         </div>
-        <div class="game__wrapper">
-          <div class="game__container">
-           <p class="game__name"></p>
-            <p class="game__genre"></p>
-            <p class="game__text"></p>
-          </div>
-        </div>
         <a class="game__button-back">
           <span class="game__span"><</span>
           <span class="game__span2"></span>
         </a>
         <button type="button" class="game__button-watchlist">
-          <svg class="game__button-svg" width="24" height="24">
-            <use xlink:href="img/icons/stack.svg#heart-icon"></use>
+          <p class="game__button-wish">Wish</p>
+        </button>
+        <button type="button" class="game__button-left">
+          <svg class="button-left__svg" width="24" height="24">
+            <use xlink:href="img/icons/stack.svg#right-arrow"></use>
+          </svg>
+        </button>
+        <button type="button" class="game__button-right">
+          <svg class="button-right__svg" width="24" height="24">
+            <use xlink:href="img/icons/stack.svg#right-arrow"></use>
           </svg>
         </button>
       </div>
-      <button type="button" class="game__button-left">
-        <svg class="button-left__svg" width="24" height="24">
-          <use xlink:href="img/icons/stack.svg#right-arrow"></use>
-        </svg>
-      </button>
-      <button type="button" class="game__button-right">
-        <svg class="button-right__svg" width="24" height="24">
-          <use xlink:href="img/icons/stack.svg#right-arrow"></use>
-        </svg>
-      </button>
+      <div class="game__wrapper">
+        <div class="game__container">
+         <p class="game__name"></p>
+          <p class="game__genre"></p>
+          <div class="game__rating-wrapper">
+            <svg class="game__svg" width="24" height="24">
+              <use xlink:href="img/icons/stack.svg#star-icon"></use>
+            </svg>
+            <p class="game__img-rating">9.5</p>
+          </div>
+          <p class="game__text"></p>
+        </div>
+      </div>
     </section>
     <footer class="footer">
       <nav class="main-nav">
         <li>
           <a class="main-nav__item" href="index.html" id="games-button">
-            <svg class="main-nav__svg-games" width="24" height="24">
-              <use xlink:href="img/icons/stack.svg#home-icon"></use>
-            </svg>
             <p class="main-nav__item-text">Home</p>
           </a>
         </li>
         <li>
           <a class="main-nav__item" href="" id="watch-button">
-            <svg class="main-nav__svg-watch" width="24" height="24">
-              <use xlink:href="img/icons/stack.svg#heart-icon"></use>
-            </svg>
-            <p class="main-nav__item-text">Top</p>
+            <p class="main-nav__item-text">Wish</p>
           </a>
         </li>
       </nav>
