--- a/index.html
+++ b/index.html
@@ -12,38 +12,46 @@
       <div class="genre__img-wrapper">
         <h2 class="genre__img-title">Coming soon</h2>
         <a href="game.html" class="genre__img-link">
-          <img class="genre__img-soon" src="img/starfield-icon.jpg" alt="">
+          <img class="genre__img-soon" src="img/starfield-icon2.jpg" alt="">
           <pre class="genre__soon-text">Starfield      06.09.2023</pre>
+          <div class="genre__raiting-wrapper">
+            <svg class="genre__svg" width="24" height="24">
+              <use xlink:href="img/icons/stack.svg#star-icon"></use>
+            </svg>
+            <p class="genre__img-raiting">8</p>
+          </div>
         </a>
       </div>
-      <div class="genre__select-wrapper">
-        <select class="genre__select">
-          <option class="genre__option" value="" selected disabled>Choose a genre</option>
-          <option class="genre__option" value="Racing">Racing</option>
-          <option class="genre__option" value="Action">Action</option>
-          <option class="genre__option" value="Simulation">Simulation</option>
-          <option class="genre__option" value="Sports">Sports</option>
-          <option class="genre__option" value="Strategy">Strategy</option>
-          <option class="genre__option" value="Fantasy">Fantasy</option>
-        </select>
-        <button type="button" class="genre__button">Continue</button>
+      <div class="genre__inputs-wrapper">
+        <div class="genre__input-wrapper">
+          <input type="text" class="genre__input" placeholder="Enter the name of the game">
+          <button type="button" class="genre__input-button">Search</button>
+        </div>
+        <div class="genre__select-wrapper">
+          <select class="genre__select">
+            <option class="genre__option" value="" selected disabled>Choose a genre</option>
+            <option class="genre__option" value="Racing">Racing</option>
+            <option class="genre__option" value="Action">Action</option>
+            <option class="genre__option" value="Simulation">Simulation</option>
+            <option class="genre__option" value="Sports">Sports</option>
+            <option class="genre__option" value="Strategy">Strategy</option>
+            <option class="genre__option" value="Fantasy">Fantasy</option>
+            <option class="genre__option" value="Adventure">Adventure</option>
+            <option class="genre__option" value="Arcade">Arcade</option>
+          </select>
+          <button type="button" class="genre__button">Continue</button>
+        </div>
       </div>
     </section>
     <footer class="footer">
       <nav class="main-nav">
         <li>
           <a class="main-nav__item main-nav__item--active" id="games-button">
-            <svg class="main-nav__svg-games" width="24" height="24">
-              <use xlink:href="img/icons/stack.svg#home-icon"></use>
-            </svg>
             <p class="main-nav__item-text">Home</p>
           </a>
         </li>
         <li>
           <a class="main-nav__item" href="" id="watch-button">
-            <svg class="main-nav__svg-watch" width="24" height="24">
-              <use xlink:href="img/icons/stack.svg#heart-icon"></use>
-            </svg>
             <p class="main-nav__item-text">Wish</p>
           </a>
         </li>
