--- a/game.html
+++ b/game.html
@@ -59,6 +59,11 @@
             <p class="main-nav__item-text">Wish</p>
           </a>
         </li>
+        <li>
+          <a class="main-nav__item" href="" id="load-button">
+            <p class="main-nav__item-text">Save</p>
+          </a>
+        </li>
       </nav>
     </footer>
     <script src="js/game.js" type="module" defer></script>
